# CppConfigFramework

./: .gitignore  README.md
code/: CMakeLists.txt
code/cmake/: CppConfigFrameworkConfig.cmake
code/inc/CppConfigFramework/: ConfigContainerHelper.hpp  ConfigDerivedObjectNode.hpp  ConfigItem.hpp  ConfigLoader.hpp  ConfigNode.hpp  ConfigNodePath.hpp  ConfigNodeReference.hpp  ConfigObjectNode.hpp  ConfigParameterLoader.hpp  ConfigParameterValidator.hpp  ConfigReader.hpp  ConfigReaderBase.hpp  ConfigReaderFactory.hpp  ConfigReaderRegistry.hpp  ConfigValueNode.hpp  ConfigWriter.hpp  DerivedObjectData.hpp  EnvironmentVariables.hpp  HashFunctions.hpp  LoggingCategories.hpp  Pimpl.hpp  PimplWrapper.hpp
code/src/: ConfigDerivedObjectNode.cpp  ConfigItem.cpp  ConfigLoader.cpp  ConfigNode.cpp  ConfigNodeData.cpp  ConfigNodeData.hpp  ConfigNodeImpl.cpp  ConfigNodeImpl.hpp  ConfigNodePath.cpp  ConfigNodeReference.cpp  ConfigObjectNode.cpp  ConfigParameterLoader.cpp  ConfigReader.cpp  ConfigReaderBase.cpp  ConfigReaderFactory.cpp  ConfigReaderImpl.cpp  ConfigReaderImpl.hpp  ConfigReaderRegistry.cpp  ConfigValueNode.cpp  ConfigWriter.cpp  DebugHelper.hpp  DerivedObjectData.cpp  EnvironmentVariables.cpp  LoggingCategories.cpp
code/tests/: CMakeLists.txt
code/tests/unit/: CMakeLists.txt
code/tests/unit/ConfigItem/: CMakeLists.txt  TestData.qrc  testConfigItem.cpp
code/tests/unit/ConfigItem/TestData/: LoadConfigContainer.json  LoadConfigParameter.json  TestLoadConfig.json
code/tests/unit/ConfigLoader/: CMakeLists.txt  TestClasses.cpp  TestClasses.hpp  TestData.qrc  testConfigLoader.cpp
code/tests/unit/ConfigLoader/TestData/: TestConfigParameterRequirement.json  TestLoadConfigAtPath.json
code/tests/unit/ConfigNode/: CMakeLists.txt  testConfigNode.cpp
code/tests/unit/ConfigNodePath/: CMakeLists.txt  testConfigNodePath.cpp
code/tests/unit/ConfigParameterLoader/: CMakeLists.txt  testConfigParameterLoader.cpp
code/tests/unit/ConfigParameterValidator/: CMakeLists.txt  testConfigParameterValidator.cpp
code/tests/unit/ConfigReader/: CMakeLists.txt  TestData.qrc  testConfigReader.cpp
code/tests/unit/ConfigReader/TestData/: ConfigInvalidDerivedObject1.json  ConfigInvalidDerivedObject10.json  ConfigInvalidDerivedObject2.json  ConfigInvalidDerivedObject3.json  ConfigInvalidDerivedObject4.json  ConfigInvalidDerivedObject5.json  ConfigInvalidDerivedObject6.json  ConfigInvalidDerivedObject7.json  ConfigInvalidDerivedObject8.json  ConfigInvalidDerivedObject9.json  ConfigInvalidEnvVar1.json  ConfigInvalidEnvVar2.json  ConfigInvalidEnvVar3.json  ConfigInvalidEnvVar4.json  ConfigInvalidMemberName.json  ConfigInvalidNodeReference.json  ConfigInvalidReferenceType.json  ConfigInvalidSubObjectNode.json  ConfigNotObject.json  ConfigUnresolvableExternalConfigReferences.json  ConfigUnresolvedFilePath.json  ConfigUnresolvedReference.json  ConfigWithDerivedArrays.json  ConfigWithDerivedObjects.json  ConfigWithExternalConfigReferences.json  ConfigWithIncludes.json  ConfigWithIncludesAndEnv.json  ConfigWithNodeReferences.json  ConfigWithOnlyIncludes.json  CurrentDirectoryEnvironmentVariable.json  Include1.json  Include2.json  Include3.json  IncludeWithExternalConfigReferences.json  IncludeWithInvalidDerivedObjectBase.json  IncludeWithUnresolvableExternalConfigReferences.json  IncludesItemInvalidConfig.json  IncludesItemInvalidDestinationNode1.json  IncludesItemInvalidDestinationNode2.json  IncludesItemInvalidDestinationNode3.json  (+13 more)
code/tests/unit/ConfigReader/TestData/includes/: Include1.json  Include2.json  IncludeWithCurrentDir.json
code/tests/unit/ConfigWriter/: CMakeLists.txt  testConfigWriter.cpp
code/tests/unit/EnvironmentVariables/: CMakeLists.txt  testEnvironmentVariables.cpp
docs/: Design.md  Requirements.md
docs/Diagrams/: ClassDiagrams.plantuml  FlowCharts.plantuml
